refactor(whelk-core.util): port LegacyIntegrationTools to Java